# mythoscope

./: .env.example  .gitignore  DRAFT.rtf  EXTRACT.md  LITERATURE.md  README.md  UI.py  add_discription_to_text.py  build_corpus.py  build_embbedings.py  build_faiss_index.py  clean_gutenberg.py  download_and_build_corpus.py  download_list.json  extract_knowledge.py  how_to.md  main.py  plot_embeddings_and_meta.py  pyproject.toml  query.py  reduce_embeddings_ae.py  reduce_embeddings_umap.py  requirements.txt  settings.py  Корпус_Доступность.xlsx  код_графов_персонажей (2).ipynb
.config/: .last_survey_prompt.yaml  .last_update_check.json
analysis/: analysis_summary.txt  models.json  performance_metrics.json  umap_traditions_data.csv
analysis/BAAI_bge-m3/: analysis_summary.txt  embeddings_data.csv  model_info.json  pca_2d_traditions.html  tsne_2d_perplexity-30_traditions.html  tsne_2d_perplexity-50_traditions.html  tsne_2d_perplexity-5_traditions.html  tsne_2d_traditions.html  umap_2d_traditions.html  umap_traditions_data.csv
analysis/Qwen_Qwen3-Embedding/: analysis_summary.txt  model_info.json  tsne_2d_perplexity-30_traditions.html  tsne_2d_perplexity-50_traditions.html  tsne_2d_perplexity-5_traditions.html
analysis/intfloat_e5-large-v2/: analysis_summary.txt  model_info.json  tsne_2d_perplexity-30_traditions.html  tsne_2d_perplexity-50_traditions.html  tsne_2d_perplexity-5_traditions.html
analysis/sentence-transformers_LaBSE/: analysis_summary.txt  model_info.json  tsne_2d_perplexity-30_traditions.html  tsne_2d_perplexity-50_traditions.html  tsne_2d_perplexity-5_traditions.html
analysis/sentence-transformers_paraphrase-multilingual-MiniLM-L12-v2/: analysis_summary.txt  model_info.json  tsne_2d_perplexity-30_traditions.html  tsne_2d_perplexity-50_traditions.html  tsne_2d_perplexity-5_traditions.html
chroma_db/162ab049-26e1-4967-8157-d7fcf1843696/: index_metadata.pickle
chroma_db/9c4cd40b-d4aa-46f7-b37b-963ca963082b/: index_metadata.pickle
chroma_db/a6adf756-e55e-4105-8a6f-509d3556c8dd/: index_metadata.pickle
chroma_db/aa5064b3-b2a0-4042-bad9-56c6c8851259/: index_metadata.pickle
chroma_db/bc98bb19-4869-4465-80d9-d4f595206dc9/: index_metadata.pickle
config/: 02_embed.yaml  05_graphs.yaml  corpus.yaml  corpus_builder.yaml  download_list.json  embedding.yaml  embedding_analyzer.yaml  graphs_generator.yaml  graphs_prompts.txt  server.yaml
config/details/: corpora.json  prompts.txt
config/template/: add_new_doc_request.html  corpus.html  embeddings_analysis.html  geography.html  graph_explorer.html  graphs.html  scan_graph.php  searchSimilarities.html
corpus/: corpus_catalog.csv  corpus_metadata.json  processed_urls.json  traditions_info.json
corpus_builder/: __init__.py  build_corpus.py  builder.py  catalog.py  config.py  config.yaml  downloader.py  utils.py
details/: regions.txt  traditions.json
docs/: DRAFT.rtf  config-refactoring-plan.md  how_to.md  run_in_colab.ipynb  код_графов_персонажей (2).ipynb
embedding_analyzer/: __init__.py  analyzer.py  config.py  config.yaml  loader.py  utils.py  visualization.py
embeddings_builder/: __init__.py  build_embeddings.py  builder.py  cache_manager.py  cache_utils.py  cache_validator.py  chroma_manager.py  chunking.py  cli.py  config.py  config.yaml  config_manager.py  models_repository.py  performance_metrics.py  test_models.py
embeddings_clustering/: __init__.py  metrics.py  models.py  run_clustering.py  visualization.py
graphs/: web_asian-characters.html  web_bible1-characters.html  web_dhammapada-characters.html  web_egypt_gods_legends-characters.html  web_egypt_legends-characters.html  web_japan-characters.html  web_jew_fathers-characters.html  web_junius-characters.html  web_maori-characters.html  web_pr-edda-characters.html  web_vikram-characters.html
graphs_generator/: __init__.py  config.yaml  graph_generator.py  llm_processing.py  prompts_loader.py  run_graph_generation.py
outputs/corpus/: corpus_catalog.csv  corpus_metadata.json  (+1 more)
sources_backup/: changelog.txt
src/: clean_gutenberg.py  cli.py  config_loader.py  json_utils.py  lazy_imports.py  log_setup.py  main.py  settings.py
template/: analysis.html  cluster_analysis.html  corpus.html  embeddings_analysis.html  graph_explorer.html  graph_view.html  graphs.html  home.html  models_accuracy.html  models_list.html  navbar.html  searchSimilarities.html
tests/: conftest.py  test_chroma_manager.py  test_chroma_writer.py  test_chunking.py  test_clean_gutenberg.py  test_cli.py  test_clustering_metrics.py  test_clustering_models.py  test_clustering_run.py  test_config_loader.py  test_config_manager.py  test_corpus_builder.py  test_corpus_catalog.py  test_corpus_iterator.py  test_corpus_utils.py  test_embedding_cache.py  test_embedding_models_integration.py  test_embeddings_cache_utils.py  test_graph_utils.py  test_model_manager.py  test_performance_metrics.py  test_projection_visualization.py  test_reduce_dimensions.py  test_save_summary.py  test_server_config.py  test_server_corpus.py  test_server_embedding_index.py  test_server_endpoints.py  test_server_models_service.py  test_server_schemas.py  test_settings.py  test_ui_corpus_service.py
ui_server/: __init__.py  config.py  run_server.py  schemas.py
(+442 files in other folders)
